--- a/ClotheOurKids.Web/Views/AboutUs/Leadership.cshtml
+++ b/ClotheOurKids.Web/Views/AboutUs/Leadership.cshtml
@@ -42,9 +42,9 @@
             <!--First column-->
             <div class="col-lg-4 col-md-12 mb-r">
 
-                <div class="avatar">
+                @*<div class="avatar">
                     <img src="~/Content/img/brandi.jpg" class="rounded-circle">
-                </div>
+                </div>*@
                 <h4>Brandi Breeden</h4>
                 <h5>President / Co-Founder</h5>
                 <p>Brandi is the life and soul of our organization. She pours herself into the day to day operations, administrative tasks, outreach, and vision of Clothe Our Kids of North Alabama.</p>
@@ -54,9 +54,9 @@
             <!--Second column-->
             <div class="col-lg-4 col-md-12 mb-r">
 
-                <div class="avatar">
-                    <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(3).jpg" class="rounded-circle">
-                </div>
+                @*<div class="avatar">
+                    <img src="~/Content/img/perry.jpg" class="rounded-circle img-fluid">
+                </div>*@
                 <h4>Perry Jeffers</h4>
                 <h5>Vice President</h5>
                 <p>Perry serves as our Vice President. He dedicates his time to assist Brandi with many day to day activities as well as offering guidance and wisdom in the vision and planning of our operations.</p>
@@ -66,12 +66,12 @@
             <!--Third column-->
             <div class="col-lg-4 col-md-12 mb-r">
 
-                <div class="avatar">
+                @*<div class="avatar">
                     <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(3).jpg" class="rounded-circle">
-                </div>
+                </div>*@
                 <h4>Michael Breeden</h4>
                 <h5>Secretary / Treasurer / Co-Founder</h5>
-                <p>Michael serves as our Secretary and Treasurer and helps out with the day to day activities as often as possible. He is also responsible for building and maintaining our website.</p>
+                <p>Michael serves as our Secretary and Treasurer. He helps out with the day to day activities as often as possible, but the majority of his work happens behind the scenes. He dedicates his time after his day job to building and maintaining our website.</p>
 
             </div>
             <!--/Third column-->
@@ -82,5 +82,23 @@
     </section>
     <!--/Section: Team v.1-->
 
+    <hr class="between-sections" />
 
+    <!--Section-->
+    <section class="section">
+        <!--Section heading-->
+        <h1 class="section-heading">Clothe Our Kids of North Alabama Board of Directors</h1>
+        <!--Section description-->
+        @*<p class="section-description">Clothe Our Kids of North Alabama Board Members</p>*@
+
+        <p class="text-center">
+            Brandi Breeden <br />
+            Michael Breeden <br />
+            Melanie Burger <br />
+            Perry Jeffers <br />
+            Amanda McAlpin <br />
+            Cindy Sandoval
+        </p>
+    </section>
+    <!--/Section-->
 </div>
