--- a/ClotheOurKids.Web/Views/OurWork/OurWork.cshtml
+++ b/ClotheOurKids.Web/Views/OurWork/OurWork.cshtml
@@ -1,5 +1,4 @@
-﻿<div class="container-fluid">
-
+﻿<div class="container">
     <section class="section page-top-section mb-4 wow fadeIn" data-wow-delay="0.2s">
         <div class="row">
             <div class="col-12">
@@ -18,70 +17,44 @@
                    type="button" class="btn-floating btn-small btn-tw">
                     <i class="fa fa-twitter"></i>
                 </a>
-
-                <!--Email-->
-                <a type="button" class="btn-floating btn-small btn-email"><i class="fa fa-envelope"></i></a>
-
             </div>
         </div>
     </section>
+</div>
 
-    <div class="streak streak-lg streak-photo img-responsive" style="background-image:url('../../Content/img/ClotheOurKids/Love_Shirt.jpg');">
-    </div>
+<div class="streak streak-lg streak-photo" style="background-image:url('../../Content/img/ClotheOurKids/COKJULY-19.jpg');">       
+</div>
 
-
+<div class="container">
     <!--Section: Our Process-->
-    <section class="section mt-4 feature-box">
+    <section class="section mt-4">
         <!--Section heading-->
         <h1 class="section-heading wow fadeIn" data-wow-delay="0.2s">Our Process</h1>
         <!--Section description-->
-        <p class="section-description lead wow fadeIn" data-wow-delay="0.2s">We have a simple process to get clothes into the hands of kids that need them</p>
+        <p class="section-description lead wow fadeIn" data-wow-delay="0.2s">We have a simple process to get clothing and hygiene items into the hands of kids who need them</p>
 
-
-        <!--First row-->
-        <div class="row features-small wow fadeIn" data-wow-delay="0.4s">
-
-            <!--First column-->
-            <div class="col-md-5 mb-r d-flex justify-content-center align-self-center">
-                <img src="~/Content/img/ClotheOurKids/COKTrailer-12.jpg" class="img-fluid" style="max-height: 500px;" />
+        <div class="row mb-1 text-center">
+            <div class="col bg-red white-text mr-2">
+                <h4 class="mt-5">Collect</h4>
+                <p class="white-text mb-5">We rely 100% on your clothing and financial donations to ensure we can provide for all of the kids who need our help.</p>
             </div>
-            <!--/First column-->
-            <!--Second column-->
-            <div class="col-md-7 center-on-small-only align-self-center">
-                <!--First row-->
-                <div class="row">
-                    <div class="col-12">
-                        <h4 class="feature-title">Collect</h4>
-                        <p class="grey-text">We rely 100% on your clothing and financial donations to ensure we can clothe all of the kids who need our help.</p>
-                    </div>
-                </div>
-                <!--/First row-->
-
-                <div style="height:50px"></div>
-
-                <!--Second row-->
-                <div class="row">
-                    <div class="col-12">
-                        <h4 class="feature-title">Sort</h4>
-                        <p class="grey-text">We inspect all of the apparel that we collect and keep only the items that a child can wear with confidence.</p>
-                    </div>
-                </div>
-                <!--/Second row-->
-
-                <div style="height:50px"></div>
-
-                <!--Third row-->
-                <div class="row">
-                    <div class="col-12">
-                        <h4 class="feature-title">Give</h4>
-                        <p class="grey-text">At the request of a school official or child advocate we give a bag of hand-picked and matched clothing to any child from infants to highschool seniors.</p>
-                    </div>
-                </div>
-                <!--/Third row-->
+            <div class="col bg-light-blue">
+                <h4 class="mt-5">Sort</h4>
+                <p class="white-text mb-5">
+                    We inspect all of the apparel that we collect for stains, holes, or excessive wear and keep only the items that a child can wear with confidence.
+                </p>
             </div>
-            <!--/Second column-->
         </div>
-        <!--/First row-->
+        <div class="row text-center">
+            <div class="col bg-light-green mr-2">
+                <h4 class="white-text mt-5">Pack</h4>
+                <p class="white-text mb-5">At the request of a school official or child advocate pack a bag of hand-picked clothing and necessary hygiene items.</p>
+            </div>
+            <div class="col bg-yellow">
+                <h4 class="white-text mt-5">Deliver</h4>
+                <p class="white-text mb-5">We deliver each bag to the school or organization to be given to the child in need.</p>
+            </div>
+        </div>
     </section>
     <!--/Section: Our Process-->
 
@@ -97,7 +70,7 @@
             We know that the children we help may have different clothing needs.
             Many children will be starting with <strong>nothing</strong> that fits them.
             Many will have <strong>nothing</strong> they feel confident wearing to school.
-            Others may just need a coat, a pair of shoes, or some new underwear.
+            Others may just need a coat, a pair of shoes, or just hygiene items.
             Our goal is to <strong>meet the need</strong> of each kid we help,
             so we customize each bag we give based on the specific need of that child.
         </p>
@@ -244,8 +217,8 @@
         <h1 class="section-heading wow fadeIn" data-wow-delay="0.2s">Who We Help</h1>
         <!--Section description-->
         <p class="section-description wow fadeIn" data-wow-delay="0.2s">
-            Many of us take for granted the fact that we can give our kids clean clothes that fit well and are appropriate for school.
-            We might be surprised to learn that children in our kids classes do not have this same luxury.  Kids can be without proper clothes for a number
+            Many of us take for granted the fact that we can give our kids clean clothes that fit and are appropriate for school.
+            We might be surprised to learn that children in our kids classes do not have this same luxury.  Kids can be without proper clothing for a number
             of reasons:
         </p>
 
@@ -372,8 +345,8 @@
         <!--/First row-->
 
         <p class="section-description wow fadeIn" data-wow-delay="0.2s">
-            We want to help kids in each of these situations by giving them clothes that fit well, are lightly used, and are appropriate for school.
-            We rely on school officials to contact us on behalf of these children so that we can work through the school to protect the child's anonimity.
+            We want to help kids in each of these situations by giving them clothing that fits well, is lightly used or new, and is appropriate for school.
+            We rely on school officials or other child advocate organizations to contact us on behalf of the children so that we can protect the child’s anonymity.
         </p>
     </section>
     <!--/Section: Who We Help-->
@@ -385,18 +358,19 @@
         <h1 class="section-heading wow fadeIn" data-wow-delay="0.2s">How We Operate</h1>
 
         <h3 class="h3-responsive wow fadeIn" data-wow-delay="0.2s">Closed to Public</h3>
-        <p class="section-description wow fadeIn" data-wow-delay="0.2s" style="text-align: left; margin-left: 0px; margin-right: 0px;">We are unique because we are <strong>closed</strong> to the <strong>public</strong>. We operate through local schools by requests from <strong>teachers, counselors, or principals</strong>.<p>
+        <p class="section-description wow fadeIn" data-wow-delay="0.2s" style="text-align: left; margin-left: 0px; margin-right: 0px;">We are unique because we are <strong>closed</strong> to the <strong>public</strong>. We operate through local schools and other organizations by receiving requests from teachers, counselors, principals, or other child advocates.<p>
 
             <h3 class="h3-responsive wow fadeIn" data-wow-delay="0.2s">Discrete</h3>
         <p class="section-description wow fadeIn" data-wow-delay="0.2s" style="text-align: left; margin-left: 0px; margin-right: 0px;">
-            We know that it is <strong>difficult</strong> for a parent to ask for clothes for their children.
-            We believe that every request should be <strong>private</strong> between the school official and the parents.
-            For this reason, Clothe Our Kids of Morgan County will <strong>never</strong> know the identity of the children we provide clothing for.
-            The school sends us general information with each request which includes only the child's gender, sizes, and possibly demographic data.  We bag up the clothes and deliver the bag to the school official to <strong>discretely</strong> give to the child. The bags we use are plain and unmarked, so they will not draw attention to children as they receive the bag at school and take it home.
+            We know that it is <strong>difficult</strong> for a parent to ask for clothing for their children.
+            We believe that every request should be <strong>private</strong> between the school official or child advocate and the parents.
+            For this reason, Clothe Our Kids of North Alabama will <strong>never</strong> know the identity of the children we provide clothing for.
+            The school official or child advocate sends us general information with each request that includes only the child's gender, grade, school, and sizes.  We bag up the clothing and hygiene items needed and deliver the bag to the school official or child advocate to <strong>discretely</strong> give to the child.
+            The bags we use are plain and unmarked, so they will not draw attention to children as they receive the bag at school to take it home.
         </p>
 
         <h3 class="h3-responsive wow fadeIn" data-wow-delay="0.2s">Clothing with Confidence</h3>
-        <p class="section-description wow fadeIn" data-wow-delay="0.2s" style="text-align: left; margin-left: 0px; margin-right: 0px;">We strive to give each child the best clothes we can so they can go to school feeling <strong>confident</strong>. To make this possible, we only give clothing that is in <strong>great</strong> condition - that means <strong>no stains or tears</strong>.</p>
+        <p class="section-description wow fadeIn" data-wow-delay="0.2s" style="text-align: left; margin-left: 0px; margin-right: 0px;">We strive to give each child the best clothing we can so they can go to school feeling <strong>confident</strong>. To make this possible, we only give clothing that is in <strong>great</strong> condition - that means <strong>no stains or tears</strong>.</p>
 
     </section>
     <!--/Section: How We Operate-->
