--- a/ClotheOurKids.Web/Views/RequestClothes/RequestClothesForm.cshtml
+++ b/ClotheOurKids.Web/Views/RequestClothes/RequestClothesForm.cshtml
@@ -40,7 +40,7 @@
     <section class="section page-top-section mb-4 wow fadeIn" data-wow-delay="0.2s">
         <div class="row">
             <div class="col-12">
-                <h1 class="section-heading">Request Clothes For A Child</h1>
+                <h1 class="section-heading">Request Clothing For A Child</h1>
             </div>
             <div class="col-12">
                 <p class="section-description"><i><strong>Giving</strong> clothes. <strong>Showing</strong> love. <strong>Building</strong> confidence.</i></p>
