--- a/ClotheOurKids.Web/Content/css/style.css
+++ b/ClotheOurKids.Web/Content/css/style.css
@@ -253,3 +253,15 @@
         right: 5px;
     }
 }
+
+
+.card.card-cascade {
+    height: 100%;
+    display: flex;
+}
+
+.card.card-cascade .card-block {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+}
