--- a/ClotheOurKids.Web/Views/AboutUs/WhoWeAre.cshtml
+++ b/ClotheOurKids.Web/Views/AboutUs/WhoWeAre.cshtml
@@ -25,63 +25,42 @@
             </div>
         </div>
     </section>  
+</div>
 
-    <hr class="between-sections">
+<div class="streak bg-light-blue white-text">
+    <div class="flex-center">
+        <ul>
+            <li><h2 class="h2-responsive wow fadeIn"><i class="fa fa-quote-left" aria-hidden="true"></i> Never worry about numbers. <br /> Help one person at a time, and always start with the person nearest you. <i class="fa fa-quote-right" aria-hidden="true"></i></h2></li>
+            <li><h5 class="text-center font-italic wow fadeIn" data-wow-delay="0.2s">~ Mother Teresa</h5></li>
+        </ul>
+    </div>
+</div>
 
-    <!--Section: Team v.1-->
-    <section class="section team-section">
+<div class="container">
+    <!--Section-->
+    <section class="section mt-5">
 
         <!--Section heading-->
-        <h1 class="section-heading">Meet Our Officers</h1>
+        <h1 class="section-heading">Our Founding</h1>
         <!--Section description-->
-        <p class="section-description">Our officers are dedicated to ensuring that we do everything that we can to clothe kids in North Alabama.</p>
+        <p class="section-description text-left">
+            Clothe Our Kids of North Alabama was founded by Michael and Brandi Breeden in April of 2016. 
+            When moving back home to Alabama after living in Tennessee for 3 years both felt a calling to do more in their community. 
+        </p>
+        <p class="section-description text-left">
+            After hearing about a Clothe Our Kids operating in Lincoln County, TN they met with founder Laura Meyer and learned how they operated and served the children in their community.
+            They saw that Morgan County had a gap for providing clothing to children within the school systems who are in need.
+            Michael and Brandi went straight to work to form the organization previously known as Clothe Our Kids of Morgan County.
+        </p>
 
-        <!--First row-->
-        <div class="row text-center">
+        <p class="section-description text-left">
+            Michael and Brandi reside in Priceville, AL and have two children, Jeremiah and Bella. They are members of Lifepoint Church in Decatur, AL.
+        </p>
 
-            <!--First column-->
-            <div class="col-lg-4 col-md-12 mb-r">
-
-                <div class="avatar">
-                    <img src="~/Content/img/brandi.jpg" class="rounded-circle">
-                </div>
-                <h4>Brandi Breeden</h4>
-                <h5>President / Co-Founder</h5>
-                <p>Brandi is the life and soul of our organization. She pours herself into the day to day operations, administrative tasks, outreach, and vision of Clothe Our Kids of North Alabama.</p>
-
-            </div>
-            <!--/First column-->
-            <!--Second column-->
-            <div class="col-lg-4 col-md-12 mb-r">
-
-                <div class="avatar">
-                    <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(3).jpg" class="rounded-circle">
-                </div>
-                <h4>Perry Jeffers</h4>
-                <h5>Vice President</h5>
-                <p>Perry serves as our Vice President. He dedicates his time to assist Brandi with many day to day activities as well as offering guidance and wisdom in the vision and planning of our operations.</p>
-
-            </div>
-            <!--/Second column-->
-
-            <!--Third column-->
-            <div class="col-lg-4 col-md-12 mb-r">
-
-                <div class="avatar">
-                    <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(3).jpg" class="rounded-circle">
-                </div>
-                <h4>Michael Breeden</h4>
-                <h5>Secretary / Treasurer / Co-Founder</h5>
-                <p>Michael serves as our Secretary and Treasurer and helps out with the day to day activities as often as possible. He is also responsible for building and maintaining our website.</p>
-
-            </div>
-            <!--/Third column-->
-
-        </div>
-        <!--/First row-->
+        
 
     </section>
-    <!--/Section: Team v.1-->
+    <!--/Section-->
 
 
 </div>
