--- a/ClotheOurKids.Web/Views/Donation/GetInvolved.cshtml
+++ b/ClotheOurKids.Web/Views/Donation/GetInvolved.cshtml
@@ -47,7 +47,7 @@
             <div class="col-md-5 d-flex align-self-center mb-r wow fadeInLeft" data-wow-delay="0.2s">
                 <!--Featured image-->
                 <div class="view overlay hm-white-slight">
-                    <img src="https://mdbootstrap.com/images/regular/people/img%20(47).jpg">
+                    <img class="img-responsive" src="~/Content/img/ClotheOurKids/COKJULY-3.jpg">
                     <a>
                         <div class="mask"></div>
                     </a>
@@ -76,7 +76,7 @@
         <div class="row">
 
             <!--First column-->
-            <div class="col-md-7 d-flex align-self-center mb-r wow fadeInLeft" data-wow-delay="0.3s">
+            <div class="col-md-7 flex-last flex-md-first d-flex align-self-center mb-r wow fadeInLeft" data-wow-delay="0.3s">
                 <!--Excerpt-->
                 <div>
                     <h4>Host A Drive</h4>
@@ -90,10 +90,10 @@
             </div>
             <!--/First column-->
             <!--Second column-->
-            <div class="col-md-5 d-flex align-self-center mb-r wow fadeInRight" data-wow-delay="0.3s">
+            <div class="col-md-5 flex-first flex-md-last d-flex align-self-center mb-r wow fadeInRight" data-wow-delay="0.3s">
                 <!--Featured image-->
                 <div class="view overlay hm-white-slight">
-                    <img src="https://mdbootstrap.com/images/regular/people/img%20(48).jpg">
+                    <img class="img-responsive" src="~/Content/img/ClotheOurKids/COKTrailer-17.jpg">
                     <a>
                         <div class="mask"></div>
                     </a>
@@ -111,7 +111,7 @@
             <div class="col-md-5 align-self-center mb-r wow fadeInLeft" data-wow-delay="0.4s">
                 <!--Featured image-->
                 <div class="view overlay hm-white-slight">
-                    <img src="https://mdbootstrap.com/images/regular/people/img%20(49).jpg">
+                    <img src="~/Content/img/ClotheOurKids/COKJULY-10.jpg">
                     <a>
                         <div class="mask"></div>
                     </a>
@@ -138,7 +138,7 @@
         <div class="row">
 
             <!--First column-->
-            <div class="col-md-7 align-self-center mb-r wow fadeInLeft" data-wow-delay="0.3s">
+            <div class="col-md-7 flex-last flex-md-first align-self-center mb-r wow fadeInLeft" data-wow-delay="0.3s">
                 <!--Excerpt-->
                 <div>
                     <h4>Give</h4>
@@ -152,10 +152,10 @@
             </div>
             <!--/First column-->
             <!--Second column-->
-            <div class="col-md-5 align-self-center mb-r wow fadeInRight" data-wow-delay="0.3s">
+            <div class="col-md-5 flex-first flex-md-last align-self-center mb-r wow fadeInRight" data-wow-delay="0.3s">
                 <!--Featured image-->
                 <div class="view overlay hm-white-slight">
-                    <img src="https://mdbootstrap.com/images/regular/people/img%20(48).jpg">
+                    <img src="~/Content/img/ClotheOurKids/Love_Shirt.jpg">
                     <a>
                         <div class="mask"></div>
                     </a>
@@ -173,7 +173,7 @@
             <div class="col-md-5 align-self-center mb-r wow fadeInLeft" data-wow-delay="0.4s">
                 <!--Featured image-->
                 <div class="view overlay hm-white-slight">
-                    <img src="https://mdbootstrap.com/images/regular/people/img%20(49).jpg">
+                    <img src="~/Content/img/ClotheOurKids/You_Are_Loved_Concrete.jpg">
                     <a>
                         <div class="mask"></div>
                     </a>
@@ -203,111 +203,6 @@
 
 
 </div>
-
-
-@*<!--First column-->
-    <div class="col-md-6 mb-r">
-
-        <!--Image-->
-        <div class="view overlay hm-white-slight z-depth-2" style="max-height:400px;">
-            <img src="~/Content/img/ClotheOurKids/COKTrailer-6.jpg" class="img-fluid" />
-            <a>
-                <div class="mask waves-effect waves-light"></div>
-            </a>
-        </div>
-        <!--/Image-->
-        <!--Excerpt-->
-        <div class="card-block">
-            <h3 class="h3-responsive">Give Clothes</h3>
-            <p>
-                We always need more clothes!
-                <br />
-                100% of the clothes we give out come from donations from the community and we are always needing more. Please visit the <a href="@Url.RouteUrl("WhatWeGive")">What We Give</a> page to view the clothing items that we accept as donations.
-            </p>
-        </div>
-        <!--/Excerpt-->
-    </div>
-    <!--/First column-->
-    <!--Second column-->
-    <div class="col-md-6 mb-r">
-        <!--Image-->
-        <div class="view overlay hm-white-slight z-depth-2">
-            <img src="~/Content/img/TennesseeCOK/HostADrive.jpg" />
-            <a>
-                <div class="mask waves-effect waves-light"></div>
-            </a>
-        </div>
-        <!--/Image-->
-        <!--Excerpt-->
-        <div class="card-block">
-            <h3 class="h3-responsive">Host A Drive</h3>
-            <p>
-                We do everything we can to reach out to the community to get the word out about Clothe Our Kids of Morgan County, but we need you to help us reach the people that you know!
-                One of the best ways that you can help us is to sponsor a sock and/or underwear drive.
-                We only give out new socks and underwear, so these items are always in need.  If you would like help setting this up or ideas that would work well with your group, feel free to contact us at 256-887-KIDS(5437) or <a href="mailto:info@givekidsclothes.com">info@givekidsclothes.com</a>
-            </p>
-        </div>
-        <!--/Excerpt-->
-    </div>
-    <!--/Second column-->
-    <!--Third column-->
-    <div class="col-md-6 mb-r">
-        <!--Image-->
-        <div class="view overlay hm-white-slight z-depth-2">
-            <img src="~/Content/img/TennesseeCOK/FAQ.jpg" />
-            <a>
-                <div class="mask waves-effect waves-light"></div>
-            </a>
-        </div>
-        <!--/Image-->
-        <!--Excerpt-->
-        <div class="card-block">
-            <h3 class="h3-responsive">Volunteer</h3>
-            <p>
-                We need volunteers every week. If you can
-                <ul class="list-group">
-                    <li class="list-group-item justify-content-between">sort clothes <i class="fa fa-check green-text"></i></li>
-                    <li class="list-group-item justify-content-between">pack bags <i class="fa fa-check green-text"></i></li>
-                    <li class="list-group-item justify-content-between">deliver to schools <i class="fa fa-check green-text"></i></li>
-                </ul>
-                <br />
-
-                we need your help!
-            </p>
-
-
-            <p>
-                While we are paying that God will provide us with a team of dedicated and consistent volunteers who
-                can help us give clothes to kids week after week, we always love to have those who are looking for a short term project or even a single day of ministering to us and to kids in need.
-                <br />
-                <br />
-                Just give us a call if you are looking to get involved so that we can set up time for you to help!
-            </p>
-        </div>
-        <!--/Excerpt-->
-    </div>
-    <!--/Third column-->
-    <!--Fourth column-->
-    <div class="col-md-6 mb-r">
-        <!--Image-->
-        <div class="view overlay hm-white-slight z-depth-2">
-            <img src="~/Content/img/TennesseeCOK/Donate.jpg" />
-            <a>
-                <div class="mask waves-effect waves-light"></div>
-            </a>
-        </div>
-        <!--/Image-->
-        <!--Excerpt-->
-        <div class="card-block">
-            <h3 class="h3-responsive">Donate</h3>
-            <p>
-                Just like every other ministry or non-profit, it takes money for us to operate. Because we have no paid employees and no rent, 100% of the money that is donated goes directly to ensuring kids get the clothes they need. Visit our <a href="@Url.RouteUrl("Donate")">Donations</a> page to learn more about
-                how our funds are spent and to give us your support.
-            </p>
-        </div>
-        <!--/Excerpt-->
-    </div>
-    <!--/Fourth column-->*@
 
 
 @section customScript
